# Setup

./: .README  .dockerignore  .gitignore  Dockerfile  Dockerfile.cpu  Dockerfile.cuda112  Dockerfile.cuda123  Dockerfile.test  Makefile  README.md  Readme.md  build_and_push_docker.sh  docker-compose.cpu.yaml  docker-compose.gpu.yaml  docker-compose.yml  num2.sh  oh-my-zsh-themes.sh  oh-my-zsh.sh  pyproject.toml  python.sh  requirements.txt  second_monitor  setup_sensors.sh
cloudflare-dns/: .gitignore  README.md  dns.example.json  dns.sh
docs/: encrypted-secrets-proposal.md  fstab-boot-resilience.md  nginx-setup.md  wezterm-emoji-fix.md
dotfiles/: .bashrc  .p10k.zsh  .tmux.conf  .zshrc  claude_md  claude_settings  claude_settings.TinyButMighty  config.conf  depedencies.json  dotfiles.json  init.vim  jupyter_notebook_config.py  meta.json  meta_2.json  meta_3.json  meta_old.json  nginx.conf  nginx_port_forward.conf  terminator  test_depedencies.json  test_meta.json  wezterm.lua
nat_manager/: README.md  nat.py  pyproject.toml
plans/: 2026_02_08-plan_wezterm_tmux.md  2026_02_16-plan_setup_repo_improvements.md  2026_02_17-plan_tmux_cleanup.md  2026_02_28-plan_tmux_nesting_fix.md  2026_02_28-plan_tmux_passthrough_auto_disable.md  2026_03_08-plan_sfr_nat_manager.md  2026_03_13-plan_windows_reinstall.md
scripts/: cron-deploy.sh  crontabs  dotfiles-check.sh  dotfiles.py  grab-check-deps.sh  grab-receiver.py  python.sh  (+10 more)
transcription_server/: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.sh  server.py
transcription_server/data/: .gitignore
(+133 files in other folders)
