[project]
name = "setup"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "ezpy-logs>=0.1.2",
    "pydantic>=2.10.6",
    "pytest-ordering>=0.6",
    "fire>=0.7.0",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "python-multipart>=0.0.18",
    "whisperx @ git+https://github.com/m-bain/whisperX.git",
    "onnxruntime<1.24",
]
